Fixed #39 by adding a new class definition in CSS for portfolio text-category to have a word-wrap value. Fixed #41 by add target="_blank." Will now rework the project cards themselves to redirect to the sites.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -672,8 +672,8 @@ h2.resp-accordion:hover {
 .portfolio .label {
     position: absolute;
     width: 100%;
-    height:40px;
-    bottom:-40px;
+    height:200px;
+    bottom:-200px;
     display: block !important;
 }
 
@@ -694,11 +694,16 @@ h2.resp-accordion:hover {
 }
 
 .portfolio .text-title {
+    text-align: center;
     display:block;
     font-size:13px;
     margin: 1px;
     color : #fff;
     text-transform:capitalize;
+}
+
+.portfolio .text-category {
+    word-wrap: normal;
 }
 #fancybox-title {
     margin-left: 10px !important;
